--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(zero_to_three[0])\n",
     "print(zero_to_three[1])\n",
@@ -85,12 +96,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "for number in zero_to_three:\n",
-    "    print(number)"
+    "for x in zero_to_three:\n",
+    "    print(x)"
    ]
   },
   {
@@ -112,15 +134,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is iteration: 1\n",
+      "0\n",
+      "This is iteration: 2\n",
+      "1\n",
+      "This is iteration: 3\n",
+      "2\n",
+      "This is iteration: 4\n",
+      "3\n",
+      "The for loop is finished now! I am not in the for loop block, which is why I only printed once!\n"
+     ]
+    }
+   ],
    "source": [
     "iteration_count = 0\n",
-    "for whatever_we_want in zero_to_three:\n",
+    "for x in zero_to_three:\n",
     "    iteration_count += 1\n",
     "    print(\"This is iteration:\", iteration_count)\n",
-    "    print(whatever_we_want)\n",
+    "    print(x)\n",
     "print(\"The for loop is finished now! I am not in the for loop block, which is why I only printed once!\")"
    ]
   },
@@ -140,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,9 +187,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Croatia\n",
+      "1\n",
+      "USA\n",
+      "2\n",
+      "Argentina\n",
+      "3\n",
+      "France\n",
+      "4\n",
+      "Brazil\n",
+      "5\n",
+      "Japan\n",
+      "6\n",
+      "Vietnam\n",
+      "7\n",
+      "Israel\n"
+     ]
+    }
+   ],
    "source": [
     "for index in [0,1,2,3,4,5,6,7]:\n",
     "    print(index)\n",
@@ -167,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,9 +238,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zagreb, Croatia\n",
+      "Distric of Columbia, USA\n",
+      "Buenos Aires, Argentina\n",
+      "Paris, France\n",
+      "Rio de Janeiro, Brazil\n",
+      "Tokyo, Japan\n",
+      "Hanoi, Vietnam\n",
+      "Tel Aviv, Israel\n"
+     ]
+    }
+   ],
    "source": [
     "for index in [0,1,2,3,4,5,6,7]:\n",
     "    print(cities[index]+\",\", countries[index])"
@@ -329,9 +405,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('first_name', 'Terrance'), ('last_name', 'KOAR'), ('favorite_language', 'Python')])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dict_items"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "example_dictionary = {'first_name': \"Terrance\", 'last_name': \"KOAR\", 'favorite_language': \"Python\"}\n",
     "print(example_dictionary.items())\n",
@@ -347,9 +441,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is the key: first_name\n",
+      "this is the value: Terrance \n",
+      "\n",
+      "this is the key: last_name\n",
+      "this is the value: KOAR \n",
+      "\n",
+      "this is the key: favorite_language\n",
+      "this is the value: Python \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for key, value in example_dictionary.items():\n",
     "    print(\"this is the key:\", key)    \n",
@@ -445,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
